--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,6 @@
+@import "gallery";
+@import "slider";
+
 html {
   min-width: 100%;
   min-height: 100%;
@@ -19,6 +22,7 @@ ul {
 
 .nav-tab_container {
   text-align: center;
+  margin: 20px 0;
 }
 .nav-tab_list {
   list-style: none;
@@ -40,30 +44,4 @@ ul {
 .nav-tab_link {
   text-decoration: none;
   color: black;
-}
-
-.gallery_wrapper {
-
-}
-
-.gallery_container {
-  display: none;
-  list-style: none;
-  font-size: 0;
-}
-.gallery_item {
-  display: inline-block;
-  width: 33.233333333333333%;
-
-  img {
-    width: 100%;
-    height: auto;
-    padding: 5px;
-    box-sizing: border-box;
-  }
-}
-
-
-.gallery_dog {
-  display: block;
 }
