--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -13,6 +13,7 @@
   .gallery_item {
     display: inline-block;
     width: 33.233333333333333%;
+    cursor: pointer;
 
     img {
       width: 100%;
